GRD: add more (default for IDEA) JVM options for runIDE task